# umrah-trip-creator

./: .env.example  .gitignore  AGENTCORE_DEPLOYMENT_GUIDE.md  AGENTCORE_QUICKSTART.md  AGENT_TO_AGENT_INTEGRATION.md  AI_RESPONSE_PARSING_UPDATE.md  AMADEUS_HOTEL_INTEGRATION.md  AMPLIFY_DEPLOYMENT_STEPS.md  API_INTEGRATION_COMPLETE.md  API_KEYS_GUIDE.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_SETUP.md  AUTHENTICATION_SUMMARY.md  AWS_WEB_DEPLOYMENT_GUIDE.md  BEDROCK_MODELS_GUIDE.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_SUMMARY.md  CONCURRENT_INVOCATION_FIX.md  CONTRIBUTING.md  DEMO_VS_PRODUCTION.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_AMPLIFY_NOW.md  DEPLOY_TO_VERCEL.md  FEATURES.md  FINAL_FIX_ENVIRONMENT_VARIABLES.md  FORMATTING_AND_BOOKING_UPDATE.md  FRONTEND_GUIDE.md  FRONTEND_REAL_DATA_FIX.md  GATEWAY_INTEGRATION_COMPLETE.md  GATEWAY_QUICKSTART.md  GATEWAY_SOLUTION.md  GETTING_STARTED.md  GITHUB_SETUP.md  INTERACTIVE_SELECTION_UPDATE.md  LATEST_BEDROCK_MODELS.md  LICENSE  (+43 more)
agents/flight_agent/: .bedrock_agentcore.yaml  amadeus_tools.py  flight_agent.py  flight_runtime.py
agents/hotel_agent/: .bedrock_agentcore.yaml  amadeus_hotel_tools.py  hotel_agent.py  (+3 more)
frontend/: agentcore_client.py  auth.py  config.py  requirements.txt  run.sh  streamlit_app.py
umrah-website/: .env.production  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  MANUAL_DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  TROUBLESHOOTING.md  amplify-init.sh  deploy.sh  package-lock.json  package.json  vercel.json
(+21 files in other folders)
